<?xml version="1.0" encoding="utf-8"?>
<com.haibin.calendarview.CalendarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:calendar_content_view_id="@+id/nsvContent"
    app:calendar_show_mode="both_month_week_view"
    app:default_status="shrink">

    <com.haibin.calendarview.CalendarView
        android:id="@+id/cvMainCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingBottom="5dp"
...
